# nlub-digitizer-community

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.gitea/workflows/: build.yaml
.github/workflows/: build.yaml
docs/: _quarto.yml  analyze_listmode.qmd  analyze_scope.qmd
examples/: iir_average_dual_channel.py
forms/: connection_dialog.ui  external_device_view.ui  license_dialog.ui  main_window.ui  mca_view.ui  psu_view.ui  scope_view.ui
resources/: resources.qrc
scripts/: build_nuitka.py  build_pyinstaller.py  build_ui.py  check_release_tag.py  generate_licenses.py  generate_proto.py
src/nlab/: __init__.py  app.py  main.py
src/nlab/controllers/: external_device_controller.py  main_window_controller.py  mca_controller.py  psu_controller.py  scope_controller.py
src/nlab/hardware/: modbus_devices.py
src/nlab/hardware/digitizer/: __init__.py  digitizer.py  dma.py  hv.py  mca.py  scope.py
src/nlab/hardware/digitizer/backends/: __init__.py  base.py  grpc_backend.py  grpc_ids_backend.py
src/nlab/hardware/grpc/proto/: IDS.proto  base.proto  settings.proto
src/nlab/ui/: __init__.py
src/nlab/utils/: dma_converter.py  settings_io.py  windows_icon.py
src/nlab/views/: connection_dialog.py  license_dialog.py  log_panel.py  plot_viewbox.py
src/nlab/workers/: base_worker.py  dma_workers.py  external_device_worker.py  mca_worker.py  psu_worker.py  scope_worker.py
tests/: test_placeholder.py
