[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlab"
version = "0.2.0"
description = "Device communication and measurement GUI application"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kamil Brylew", email = "kamil.brylew@nuclear-lab.com" },
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "fast_histogram>=0.11",
    "grpcio>=1.64",
    "protobuf>=5.26",
    "pyzmq>=26.0",
    "h5py>=3.11",
    "pyyaml>=6.0",
    "nlab-modbus",
]

[project.optional-dependencies]
dev = [
    # Build & code generation
    "nuitka>=2.4",
    "grpcio-tools>=1.64",
    "ordered-set",          # required by nuitka --onefile
    "zstandard",            # required by nuitka --onefile compression
    "pyinstaller>=6.8",
    # Licensing
    "pip-licenses>=5.0",
    # Testing
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "jupyter>=1.1",
    # Linting / type checking
    "ruff>=0.4",
    "mypy>=1.10",
    # Versioning
    "bump-my-version",
]

[project.scripts]
nlab = "nlab.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nlab = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release {new_version}"
message = "chore: bump version {current_version} -> {new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "src/nlab/_version.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[project.urls]
Repository = "https://github.com/nucliflare/nlab-digitizer-community"

[tool.uv.sources]
nlab-modbus = { git = "https://github.com/nucliflare/nlab-modbus", tag = "v0.2.2" }
